   and Xavier Leroy)

* #5154, #9569, #9734: Add `Val_none`, `Some_val`, `Is_none`, `Is_some`,
  `caml_alloc_some`, and `Tag_some`. As these macros are sometimes defined by
  authors of C bindings, this change may cause warnings/errors in case of
  redefinition.
  (Nicolás Ojeda Bär, review by Stephen Dolan, Gabriel Scherer, Mark Shinwell,
  and Xavier Leroy)

- #9619: Change representation of function closures so that code pointers
  can be easily distinguished from environment variables
  (Xavier Leroy, review by Mark Shinwell and Damien Doligez)

- #9634: Allow initial and repeated commas in `OCAMLRUNPARAM`.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #9648, #9689: Update the generic hash function to take advantage
  of the new representation for function closures
  (Xavier Leroy, review by Stephen Dolan)

- #9649: Update the marshaler (output_value) to take advantage
  of the new representation for function closures
  (Xavier Leroy, review by Damien Doligez)

- #9654: More efficient management of code fragments.
  (Xavier Leroy, review by Jacques-Henri Jourdan, Damien Doligez, and
  Stephen Dolan)

- #9670: Report full major collections in Gc stats.
  (Leo White, review by Gabriel Scherer)

- #9675: Remove the caml_static_{alloc,free,resize} primitives, now unused.
  (Xavier Leroy, review by Gabriel Scherer)

- #9678: Reimplement `Obj.reachable_words` using a hash table to
  detect sharing, instead of temporary in-place modifications.  This
  is a prerequisite for Multicore OCaml.
  (Xavier Leroy, review by Jacques-Henri Jourdan and Sébastien Hinderer)

* #9697: Remove the Is_in_code_area macro and the registration of DLL code
  areas in the page table, subsumed by the new code fragment management API
  (Xavier Leroy, review by Jacques-Henri Jourdan)

- #9710: Drop "support" for an hypothetical JIT for OCaml bytecode
   which has never existed.
  (Jacques-Henri Jourdan, review by Xavier Leroy)
