@@ -29,12 +29,15 @@ intnat caml_darken_all_roots_slice (intnat);
 void caml_do_roots (scanning_action, int);
 extern uintnat caml_incremental_roots_count;
 #ifndef NATIVE_CODE
-CAMLextern void caml_do_local_roots (scanning_action, value *, value *,
-                                     struct caml__roots_block *);
+CAMLextern void caml_do_local_roots_byt (scanning_action, value *, value *,
+                                         struct caml__roots_block *);
+#define caml_do_local_roots caml_do_local_roots_byt
 #else
-CAMLextern void caml_do_local_roots(scanning_action f, char * c_bottom_of_stack,
-                                    uintnat last_retaddr, value * v_gc_regs,
-                                    struct caml__roots_block * gc_local_roots);
+CAMLextern void caml_do_local_roots_nat (
+                     scanning_action f, char * c_bottom_of_stack,
+                     uintnat last_retaddr, value * v_gc_regs,
+                     struct caml__roots_block * gc_local_roots);
+#define caml_do_local_roots caml_do_local_roots_nat
 #endif
 
 CAMLextern void (*caml_scan_roots_hook) (scanning_action);
