@@ -92,8 +92,8 @@ void caml_do_roots (scanning_action f, int do_globals)
   CAML_EV_END(EV_MAJOR_ROOTS_GLOBAL);
   /* The stack and the local C roots */
   CAML_EV_BEGIN(EV_MAJOR_ROOTS_LOCAL);
-  caml_do_local_roots(f, Caml_state->extern_sp, Caml_state->stack_high,
-                      Caml_state->local_roots);
+  caml_do_local_roots_byt(f, Caml_state->extern_sp, Caml_state->stack_high,
+                          Caml_state->local_roots);
   CAML_EV_END(EV_MAJOR_ROOTS_LOCAL);
   /* Global C roots */
   CAML_EV_BEGIN(EV_MAJOR_ROOTS_C);
@@ -113,9 +113,9 @@ void caml_do_roots (scanning_action f, int do_globals)
   CAML_EV_END(EV_MAJOR_ROOTS_HOOK);
 }
 
-CAMLexport void caml_do_local_roots (scanning_action f, value *stack_low,
-                                     value *stack_high,
-                                     struct caml__roots_block *local_roots)
+CAMLexport void caml_do_local_roots_byt (scanning_action f, value *stack_low,
+                                         value *stack_high,
+                                         struct caml__roots_block *local_roots)
 {
   register value * sp;
   struct caml__roots_block *lr;
